envoy/envoy.yaml
static_resources:
listeners:
- name: listener_0
address:
socket_address: { address: 0.0.0.0, port_value: 8080 }
filter_chains:
- filters:
- name: envoy.filters.network.http_connection_manager
typed_config:
"@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
stat_prefix: ingress_http
route_config:
name: local_route
virtual_hosts:
- name: backend
domains: ["*"]
routes:
- match: { prefix: "/recipes.RecipeService" }
route:
cluster: recipe_service
max_stream_duration: { grpc_timeout_header_max: 0s }
http_filters:
- name: envoy.filters.http.grpc_web
- name: envoy.filters.http.cors
- name: envoy.filters.http.router
clusters:
- name: recipe_service
type: LOGICAL_DNS
dns_lookup_family: V4_ONLY
connect_timeout: 5s
lb_policy: ROUND_ROBIN
load_assignment:
cluster_name: recipe_service
endpoints:
- lb_endpoints:
- endpoint:
address:
socket_address: { address: host.docker.internal, port_value: 50051 }
http2_protocol_options: {}


cors:
allow_origin_string_match: [{ prefix: "*" }]
allow_methods: "GET, POST, PUT, DELETE, OPTIONS"
allow_headers: "keep-alive,user-agent,cache-control,content-type,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout"
max_age: "1728000"
expose_headers: "grpc-status,grpc-message"
